# image-processing

./: README.md  README_zh.md  REAME_zh.md
practice_1/: CMakeLists.txt  README.md
practice_1/src/: main.cpp  main_opencv.cpp
practice_2/: README.md
practice_2/src/: main.cpp  main_opencv.cpp
practice_3/: README.md
practice_3/src/: main.cpp
practice_4/: CMakeLists.txt  README.md
practice_4/src/: main.cpp
